Removed reference id from the API. Added validation for that customerReference cannot be blank. Removed reference id from the database.
